--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
           <div class="navbar-nav text-lg-start ">
             <a class="nav-link active text-light" href="{% url 'index' %}">Inicio</a>
             <a class="nav-link text-light" href="{% url 'view_products' %}">Productos</a>
-            <a class="nav-link text-light" href="#categories">Categorias</a>
+            <!-- <a class="nav-link text-light" href="#categories">Categorias</a> -->
             {% if user.is_authenticated %}
             <a class="nav-link text-light" href="{% url 'logout' %}">Cerrar sesion</a>
             <a class="nav-link text-light" href="{% url 'historial_orden' %}">Mis compras</a>
@@ -73,6 +73,7 @@
 
   </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </html>
